vlib/v/checker/tests/mod_name_duplicate_const_err.vv
module foo

const foo = 'bar'
